--- a/CYBER ONI RGB Lamp/style.css
+++ b/CYBER ONI RGB Lamp/style.css
@@ -22,7 +22,8 @@ body{
   transform-origin: top left;
 
   /* форма из скрина */
-  clip-path: path("M 120,10 L 120,60 A 10,10 0,0,0 130,70 L 170,70 A 10,10 0,0,1 180,80 L 180,140 A 10,10 0,0,1 170,150 L 120,150 L 110,140 L 80,140 L 70,150 L 10,150 A 10,10 0,0,1 0,140 L 0,10 A 10,10 0,0,1 10,0 L 110,0 A 10,10 0,0,1 120,10 Z");
+/* 200×150 */
+clip-path: path("M 80,140 L 80,90 A 10,10 0,0,0 70,80 L 30,80 A 10,10 0,0,1 20,70 L 20,10 A 10,10 0,0,1 30,0 L 80,0 L 90,10 L 120,10 L 130,0 L 190,0 A 10,10 0,0,1 200,10 L 200,140 A 10,10 0,0,1 190,150 L 90,150 A 10,10 0,0,1 80,140 Z");
 }
 
 /* чтобы фото заполнило форму */
